Fixed the width of the controls column so that it wont wrap as easily.

--- a/app/assets/stylesheets/indicators.css.scss
+++ b/app/assets/stylesheets/indicators.css.scss
@@ -4,3 +4,5 @@
 textarea.new_indicator_text_area { width: 350px; }
 
 div.rss-icon { float: right; }
+
+th.indicator-controls { width: 50px; }
